<resources>
    <string name="app_name">JpGatsuGatsu</string>

    <string name="next_button">Suivant</string>
    <string name="prev_button">Précédent</string>
    <string name="speak">Ecouter</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Settings labels -->
    <string name="auto_play_sound">Prononcer mot automatiquement</string>
    <string name="lesson_prompt">Leçon actuelle: </string>
    <string name="mode_prompt">Interval : </string>
    <string name="display_mode_prompt">Type des entrées à afficher : </string>
    <string name="empty_ratio_prompt">Ratio de bulle à compléter :</string>
    <string name="hide_word">Cacher le texte en chinois</string>
    <string name="hide_trans">Cacher le texte en japonais sans kanjis</string>
    <string name="hide_pron">Cacher le texte japonais avec kanjis</string>
    <string name="switch_night_day_mode">Mode jour/nuit</string>
    <string name="day_active">Mode Jour actif</string>
    <string name="night_active">Mode Nuit actif</string>
    <string name="save_settings">Sauvegarder préférences</string>

    <!-- Handle error -->
    <string name="no_page_found">La page demandée est introuvable.</string>
    <string name="no_retrieved_value">Pas de valeur</string>

    <string name="confirm_quit">Deux fois la touche retour pour quitter.</string>


    <string name="level">Niveau/程度</string>
    <string name="beginner">初級</string>
    <string name="intermediate">中級</string>
    <string name="advanced">高級</string>
    <string name="category">Catégorie/題目</string>
    <string name="default_lesson_thematic">無題目課程</string>

    <string name="spd_rapid">快</string>
    <string name="spd_medium">中</string>
    <string name="spd_slow">慢</string>

    <string name="set_multiplechoice_speed">多選題速度 / QCM Vitesse</string>
    <string name="set_lettrabulle_speed">單子練習速度 / Lettrabulle Vitesse</string>
    <string name="about">關於 / A propos</string>
    <string name="settings_save">存檔 / Sauvegarder</string>
    <string name="logo">Logo</string>

    <!-- dialog contents -->
    <string name="save_dialog_content">You configuration has been saved successfully!</string>

    <!-- Game strings -->
    <string name="retry">Recommencer</string>
    <string name="game_over">Terminé</string>
    <string name="quit">Quitter/離開</string>
    <string name="score">Points/分數:</string>

    <string name="btn_switch_dst_word_mode">かんじ / 漢字</string>
    <string name="lb_lesson_chooser_main">Select a lesson</string>
    <string name="lb_lesson_search_way">Search by:</string>
    <string name="btn_begin">C\'est parti!</string>
    <string name="menu_vocabulary">單子練習 Vocabulaire</string>
    <string name="menu_conjugaison">動詞變化 Conjugaison</string>
    <string name="menu_dictionary">小字典 Petit Dictionaire</string>
    <string name="menu_multiplechoices">多選題 QCM</string>
    <string name="menu_lesson">Leçons</string>
    <string name="menu_settings">設定 \nConfigurations</string>
    <string name="menu_reader">閱讀器 Assistant de Lecture</string>
    <string name="start">開始</string>
    <string name="lesson_chooser_way">顯示課組方法：</string>
    <string name="lesson_chooser_way2">請選擇：</string>
    <string name="menu_quit">離開 Quitter</string>
    <string name="random">隨機 / Au hasard</string>
    <string name="next">下/Suivant </string>
    <string name="previous">上/Précédent </string>
    <string name="verb">Verbe/動詞</string>
    <string name="noun">Nom/名詞</string>
    <string name="other">Autre/其他</string>


    <string name="btnSpeakWord">écouter le mot</string>
    <string name="btnSpeakAll">écouter tout</string>

    <string name="expr">expr.</string>
    <string name="adj">adj.</string>
    <string name="pron">pron.</string>
    <string name="prep">prép.</string>
    <string name="proverb">prov.</string>
    <string name="adv">adv.</string>

    <string name="chooseActivity">Choisissez une activité</string>

    <string name="vocab_list_chooser">請選擇一個單子集合</string>

    <string name="display_word">Afficher mot en haut</string>
    <string name="present">Présent/現在式</string>
    <string name="imparfait">Imparfait/未完成過去時</string>
    <string name="simple_past">Passé Simple/簡單過去時</string>
    <string name="futur">Futur/簡單未來時</string>
    <string name="more_than_perfect">Plus-que-parfait/愈過時</string>
    <string name="subjonctive">Subjonctif/從屬式</string>
    <string name="subjontive_imparfait">Subjontif Imparfait/從屬式未完成過去時</string>
    <string name="subjontive_present">Subjontif Présent/從屬式見在時</string>
    <string name="imperative">Impératif/命令式</string>

    <!-- QCM -->
    <string name="choose_search_way">請選擇掃找方法：</string>
    <string name="choose_sub_search_way">[a changer]</string>


    <string name="btn_go_grammar">Fiches</string>
    <string name="btn_select_all">選所有的</string>
    <string name="btn_unselect_all">取消選擇</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>


    <!-- Strings download, update dialog -->
    <string name="update_dictionary">Dictionary Update</string>
    <string name="update_failed">Update Failed</string>
    <string name="update_succeed">Update Completed</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_succeed">Download Succeed</string>

    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="processing">Processing</string>

    
    <string name="desc_target_hide">Hide target word</string>
    <string name="desc_source1_hide">Hide source1 word</string>
    <string name="desc_source2_hide">Hide source2 word</string>

    <!-- Preferences -->
    <string name="pref_hide_source1_key">hideSource1</string>
    <string name="pref_hide_source2_key">hideSource2</string>

    <string name="pref_hide_target_key">hideTarget</string>

    <string name="pref_hide_false">Is Shown</string>
    <string name="pref_hide_true">Is Hidden</string>

    <string name="pref_hide_fr">Hide French</string>
    <string name="pref_hide_en">Hide English</string>
    <string name="pref_hide_zh">Hide Trad. Chinese</string>
    <string name="pref_hide_jp">Hide Japanese</string>
    <string name="action_settings">Action Settings</string>

    <string name="pref_chooser_mode_key">Chooser Mode</string>
    <string name="pref_chooser_mode_label">Vocabulary Chooser Mode</string>
    <string name="pref_chooser_mode_default">lesson</string>

    <string name="pref_lesson_chooser_key">lesson</string>
    <string name="pref_lesson_chooser_default">1</string>
    <string name="pref_lesson_chooser_label">Choose a lesson</string>

    <string name="pref_category_chooser_label">Choose a category</string>
    <string name="pref_category_chooser_default">animals</string>
    <string name="pref_category_chooser_key">category</string>

    <string name="pref_interval_key">interval</string>
    <string name="pref_interval_label">Choose the Interval</string>
    <string name="pref_interval_default">30</string>

</resources>
