<!-- fragment_slide_settings.xml
 This is the fragment to set for displaying
 the settings.
 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_mode_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trans_white"
                android:text="@string/lesson_prompt" />

            <Spinner
                android:id="@+id/spinner_mode_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:popupBackground="@android:color/transparent"
                android:background="@color/trans_white"

                />
        </LinearLayout>

        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/flipper_voc_chooser_mode"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_lesson_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/trans_white"
                    android:text="@string/lesson_prompt" />

                <Spinner
                    android:id="@+id/lesson_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="@android:color/transparent"
                    android:background="@color/trans_white"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_category_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/trans_white"
                    android:text="@string/category_label" />

                <Spinner
                    android:id="@+id/spinner_category_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="@android:color/transparent"
                    android:background="@color/trans_white"

                    />
            </LinearLayout>

        </ViewFlipper>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_mode_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trans_white"
                android:text="@string/mode_prompt" />

            <Spinner
                android:id="@+id/mode_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/trans_white"
                android:popupBackground="@android:color/transparent" />

        </LinearLayout>

        <Switch
            android:id="@+id/switch_day_night"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_night_day_mode" />

        <android.support.v4.widget.Space
            android:layout_height="1dp"
            android:layout_width="match_parent" />

        <CheckBox
            android:id="@+id/auto_speak_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/trans_white"
            android:text="@string/auto_play_sound" />

        <CheckBox
            android:id="@+id/hide_word_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/trans_white"
            android:text="@string/hide_word" />

        <CheckBox
            android:id="@+id/hide_trans_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/trans_white"
            android:text="@string/hide_trans" />

        <CheckBox
            android:id="@+id/hide_pron_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/trans_white"
            android:text="@string/hide_pron" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_display_mode_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trans_white"
                android:text="@string/display_mode_prompt" />

            <Spinner
                android:id="@+id/display_mode_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/trans_white"
                android:popupBackground="@android:color/transparent" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_height="1dp"
            android:layout_width="match_parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_empty_ratio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trans_white"
                android:text="@string/empty_ratio_prompt" />

            <Spinner
                android:id="@+id/empty_ratio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/trans_white"
                android:popupBackground="@android:color/transparent" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_height="3dp"
            android:layout_width="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_source_lang_chooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trans_white"
                android:text="@string/source_lang_main" />

            <Spinner
                android:id="@+id/spinner_source_lang_chooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/trans_white"
                android:popupBackground="@android:color/transparent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_source_lang_chooser2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trans_white"
                android:text="@string/source_lang_second" />

            <Spinner
                android:id="@+id/spinner_source_lang_chooser2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/trans_white"
                android:popupBackground="@android:color/transparent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_target_lang_chooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/trans_white"
                android:text="@string/target_lang_main" />

            <Spinner
                android:id="@+id/spinner_target_lang_chooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/trans_white"
                android:popupBackground="@android:color/transparent" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_height="3dp"
            android:layout_width="match_parent" />
        <Button
            android:id="@+id/save_config_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="15dp"

            android:textAllCaps="false"
            android:background="@drawable/button2"
            android:text="@string/save_settings">

        </Button>
    </LinearLayout>


</ScrollView>